# wlanpi-fpms2

./: DEVELOPMENT.md  README.md  pyproject.toml
cockpit/: index.html  manifest.json  wlanpi-fpms.css  wlanpi-fpms.js
debian/: changelog  control  copyright  postinst  postrm  prerm  rules  wlanpi-fpms2-screen.service  wlanpi-fpms2.install  wlanpi-fpms2.links  wlanpi-fpms2.service  wlanpi-fpms2.triggers
docs/: deployment.md
tests/: test_actions.py  test_core_client.py  test_menu_tree.py  test_navigator.py  test_renderer.py  test_state_store.py
wlanpi_fpms2/: __init__.py  __main__.py
wlanpi_fpms2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wlanpi_fpms2/actions/: base.py  bluetooth.py  network.py  registry.py  stubs.py  system.py  utils.py
wlanpi_fpms2/actions/apps/: kismet.py  profiler.py  scanner.py
wlanpi_fpms2/core_client/: client.py  hmac_auth.py  models.py
wlanpi_fpms2/interfaces/screen/: client.py  gpio_input.py  renderer.py
wlanpi_fpms2/interfaces/screen/drivers/: luma.py  screen.py  st7735.py
wlanpi_fpms2/interfaces/tui/: app.py
wlanpi_fpms2/nav/: navigator.py
wlanpi_fpms2/state/: app.py  broadcaster.py  menu_tree.py  models.py  periodic.py  router.py  store.py
